[package]
name = "myani"
version = "0.1.0"
authors = ["Juici <juicy66173@gmail.com>"]

description = "An app for tracking and watching anime"
homepage = "https://github.com/Juici/myani"
repository = "https://github.com/Juici/myani.git"
keywords = ["anime", "library", "myanimelist"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
chrono = "0.4"
hyper = "0.11"
futures = "0.2"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.2"
tokio = "0.1"
